--- a/PersonalBlog/appsettings.json
+++ b/PersonalBlog/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Security": {
+    "ValidIp": "0.0.0.1"
+  }
 }
